--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Essays'
+- GITenberg
 tableOfContents: Penguin persons -- Spring comes to Thumping Dick -- The passing of
   the stage sundial -- On singing songs with one finger -- The immorality of shop-windows
   -- A forgotten American poet -- New poetry and the lingering line -- The lies we
